--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "xlsx": "^0.17.0"
     },
     "devDependencies": {
+        "assertextras": "^1.1.0",
         "loctool": "2.13.0",
         "nodeunit": "^0.11.3"
     }
